// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders WhatsappCTAUrlButton component (passing a URL) 1`] = `
<message
  body="This is the body"
  displayText="Go to Hubtype"
  footer="This is the footer"
  type="whatsapp-cta-url-button"
  url="https://www.hubtype.com"
/>
`;

exports[`renders WhatsappCTAUrlButton component (passing a URL) with document header 1`] = `
<message
  body="This is the body"
  displayText="Go to Hubtype"
  footer="This is the footer"
  headerType="document"
  type="whatsapp-cta-url-button"
  url="https://www.hubtype.com"
/>
`;

exports[`renders WhatsappCTAUrlButton component (passing a URL) with image header 1`] = `
<message
  body="This is the body"
  displayText="Go to Hubtype"
  footer="This is the footer"
  headerType="image"
  type="whatsapp-cta-url-button"
  url="https://www.hubtype.com"
/>
`;

exports[`renders WhatsappCTAUrlButton component (passing a URL) with video header 1`] = `
<message
  body="This is the body"
  displayText="Go to Hubtype"
  footer="This is the footer"
  headerType="video"
  type="whatsapp-cta-url-button"
  url="https://www.hubtype.com"
/>
`;

exports[`renders WhatsappCTAUrlButton component (passing a Webview) 1`] = `
<message
  body="This is the body"
  displayText="Go to webview"
  footer="This is the footer"
  header="This is the header"
  headerType="text"
  params={
    {
      "numbers": "123",
      "redirectUri": "www.some-site.com",
    }
  }
  type="whatsapp-cta-url-button"
  url="/webviews/MyWebview?numbers=123&redirectUri=www.some-site.com"
  webview={[Function]}
/>
`;

exports[`renders WhatsappCTAUrlButton component (passing a Webview) with image header 1`] = `
<message
  body="This is the body"
  displayText="Go to webview"
  footer="This is the footer"
  headerType="image"
  params={
    {
      "numbers": "123",
      "redirectUri": "www.some-site.com",
    }
  }
  type="whatsapp-cta-url-button"
  url="/webviews/MyWebview?numbers=123&redirectUri=www.some-site.com"
  webview={[Function]}
/>
`;
